# todoist-CLI

./: .gitignore  Cargo.toml  MIGRATION_PLAN.md  README.md  README_JP.md  dotenv  pyproject.toml  requirements.txt  todo_sample.bat  todoist-cli.py  todoist_tui.py
src/: api.rs  app.rs  config.rs  main.rs  types.rs  ui.rs
todash/: cli.py  config.py  tui.py
