[package]
name = "todash"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = "0.28"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
dirs       = "5"
chrono     = "0.4"
anyhow     = "1"
